--- a/covid-19/美国婴儿潮对2020超额死亡的影响估计.ipynb
+++ b/covid-19/美国婴儿潮对2020超额死亡的影响估计.ipynb
@@ -908,7 +908,7 @@
     "tags": []
    },
    "source": [
-    "## 不用预期寿命较正2018-2021"
+    "## 不用预期寿命较正2018-2021 死亡人口"
    ]
   },
   {
@@ -1010,7 +1010,7 @@
     "tags": []
    },
    "source": [
-    "## 用预期寿命较正2018-2021"
+    "## 用预期寿命较正2018-2021 死亡人口"
    ]
   },
   {
@@ -1098,22 +1098,17 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d5a8180d-10f5-47af-bedf-c8cf31e9075a",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "id": "b860a8ad-2b43-4dd3-b045-05913b8edc4e",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
+    "tags": []
+   },
    "source": [
     "# 结论\n",
     "\n",
-    "1. 按照死亡分布曲线计算的死亡结果与真实值有gap，但我们并不关注这个gap，我们更关注死亡分布曲线计算的结果本身的增长趋势。\n",
-    "2. 不管用不用预期寿命较正，婴儿潮带来的出生人口增长在死亡分布曲线下被抹平了，在2020年并不会带来大量突增。"
+    "### 1. 按照死亡分布曲线计算的死亡结果与真实值有gap，但我们并不关注这个gap，我们更关注死亡分布曲线计算的结果本身的增长趋势。\n",
+    "### 2. 不管用不用预期寿命较正，婴儿潮带来的出生人口增长在死亡分布曲线下被抹平了，在2020年并不会带来大量突增。"
    ]
   },
   {
@@ -1149,7 +1144,7 @@
    "pygments_lexer": "ipython3",
    "version": "3.10.4"
   },
-  "toc-autonumbering": true
+  "toc-autonumbering": false
  },
  "nbformat": 4,
  "nbformat_minor": 5
